--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<div class="row prot">
 					<div class="col">
 						<h2 class="subdivision-title">Lo-Fi Prototypes - Phone</h2>
-						<img class="prototype" src="images/Lofi-Phone.png">
+						<img class="prototype" src="images/Lofi-Mobile.png">
 					</div>
 				</div>
 				<div class="row prot">
