--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</nav>
 		</div>
 		<div class="content">
-			<h1 class="division-title" id="Problems">Identifying Problems</h1>
+			<h1 class="division-title" id="Problems">Step 1 — Finding the Website</h1>
 			<div class="container">
 				<div class="col">
 					<h2 class="subdivision-title">The Mission</h2>
@@ -66,7 +66,7 @@
 					</p>
 				</div>
 			</div>
-			<h1 class="division-title" id="visual">Visual Redesign</h1>
+			<h1 class="division-title" id="visual">Step 2 — Visual Redesign</h1>
 			<div class="container">
 				<div class="col">
 					<p class="caption">I set out to redesign the website to address the issues I found with it. This process involved first creating lo-fi prototypes for different sized screens, a visual design, hi-fi prototypes, and then finally the website.</p>
@@ -112,7 +112,7 @@
 					</div>
 				</div>
 			</div>
-			<h1 class="division-title" id="res-title">Responsive Redesign</h1>
+			<h1 class="division-title" id="res-title">Step 3 — Responsive Redesign</h1>
 			<div class="container">
 				<div class="row">
 					<div class="col">
