--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
 			<h1 class="division-title" id="res-title">Step 3 — Responsive Redesign</h1>
 			<div class="container">
 				<div class="row">
-					<div class="col">
+					<div class="col link-area">
 						<p>Finally, it was time to create the redesigned website! You can view the full website for yourself at the link below, and you can also get a sneak peek of it below.</p>
-						<a class="site-link" href="https://hastyskunk127.github.io/ResponsiveRedesign/">Redesigned Website</a> 
+						<a href="https://hastyskunk127.github.io/ResponsiveRedesign/"><p "site-link">Redesigned Website</p></a> 
 					</div>
 				</div>
 				<div class="row last-pic">
