--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<div class="row">
 					<div class="col link-area">
 						<p>Finally, it was time to create the redesigned website! You can view the full website for yourself at the link below, and you can also get a sneak peek of it below.</p>
-						<a href="https://hastyskunk127.github.io/ResponsiveRedesign/"><p "site-link">Redesigned Website</p></a> 
+						<a href="https://hastyskunk127.github.io/ResponsiveRedesign/"><p class="site-link">Redesigned Website</p></a> 
 					</div>
 				</div>
 				<div class="row last-pic">
