--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</div>
 				<div class="col">
 					<h2 class="subdivision-title">The Website</h2>
-					<p class="caption"> I set my sights upon Spectrum-India, a store prominently featured on Thayer St on my campus. The store has been around for a while and I've shopped here before. When I visited the website I was shocked to see how dated the website looked, and was initially quite overwhelmed by the scattering of text across the website. </p>
+					<p class="caption"> I set my sights upon Spectrum-India, <a href="http://spectrumindia.com"> (link here) </a> a store prominently featured on Thayer St on my campus. The store has been around for a while and I've shopped here before. When I visited the website I was shocked to see how dated the website looked, and was initially quite overwhelmed by the scattering of text across the website. </p>
 				</div>
 				<div class="col">
 					<!--Image taken from http://spectrumindia.com-->
